package com.spotify.confidence;

import com.google.common.annotations.VisibleForTesting;
import com.google.common.util.concurrent.ThreadFactoryBuilder;
import com.google.protobuf.Struct;
import com.spotify.confidence.flags.resolver.v1.ResolveFlagsRequest;
import com.spotify.confidence.flags.resolver.v1.ResolveFlagsResponse;
import com.spotify.confidence.flags.resolver.v1.ResolveWithStickyRequest;
import com.spotify.confidence.flags.resolver.v1.ResolvedFlag;
import com.spotify.confidence.flags.resolver.v1.Sdk;
import com.spotify.confidence.flags.resolver.v1.SdkId;
import dev.openfeature.sdk.*;
import dev.openfeature.sdk.exceptions.FlagNotFoundError;
import dev.openfeature.sdk.exceptions.GeneralError;
import dev.openfeature.sdk.exceptions.TypeMismatchError;
import io.grpc.Status;
import io.grpc.StatusRuntimeException;
import java.time.Duration;
import java.util.Optional;
import java.util.concurrent.ExecutionException;
import java.util.concurrent.Executors;
import java.util.concurrent.ScheduledExecutorService;
import java.util.concurrent.TimeUnit;
import java.util.concurrent.atomic.AtomicReference;
import java.util.function.Function;
import org.slf4j.Logger;

/**
 * OpenFeature provider for Confidence feature flags using local resolution.
 *
 * <p>This provider evaluates feature flags locally using a WebAssembly (WASM) resolver. It
 * periodically syncs flag configurations from the Confidence service and caches them locally for
 * fast, low-latency flag evaluation.
 *
 * <p><strong>Usage Example:</strong>
 *
 * <pre>{@code
 * String clientSecret = "your-application-client-secret";
 * LocalProviderConfig config = new LocalProviderConfig();
 * OpenFeatureLocalResolveProvider provider =
 *     new OpenFeatureLocalResolveProvider(config, clientSecret);
 *
 * OpenFeatureAPI.getInstance().setProvider(provider);
 *
 * Client client = OpenFeatureAPI.getInstance().getClient();
 * String flagValue = client.getStringValue("my-flag", "default-value");
 * }</pre>
 */
@Experimental
public class OpenFeatureLocalResolveProvider implements FeatureProvider {
  private final String clientSecret;
  private static final Logger log =
      org.slf4j.LoggerFactory.getLogger(OpenFeatureLocalResolveProvider.class);
  private final StickyResolveStrategy stickyResolveStrategy;
  private final ResolverApi wasmResolveApi;
  private static final Duration POLL_LOG_INTERVAL = Duration.ofSeconds(10);
  private static final Duration DEFAULT_POLL_INTERVAL = Duration.ofSeconds(30);
  private static final ScheduledExecutorService flagsFetcherExecutor =
      Executors.newScheduledThreadPool(1, new ThreadFactoryBuilder().setDaemon(true).build());
  private static final ScheduledExecutorService logPollExecutor =
      Executors.newScheduledThreadPool(1, new ThreadFactoryBuilder().setDaemon(true).build());
  private final AccountStateProvider stateProvider;
  private final AtomicReference<ProviderState> state =
      new AtomicReference<>(ProviderState.NOT_READY);

  private static long getPollIntervalSeconds() {
    return Optional.ofNullable(System.getenv("CONFIDENCE_RESOLVER_POLL_INTERVAL_SECONDS"))
        .map(Long::parseLong)
        .orElse(DEFAULT_POLL_INTERVAL.toSeconds());
  }

  /**
   * Creates a new OpenFeature provider for local flag resolution with default configuration.
   *
   * <p>This is the simplest way to create a provider. It uses the default gRPC channel factory and
   * remote resolver fallback for sticky assignments.
   *
   * <p><strong>Example usage:</strong>
   *
   * <pre>{@code
   * OpenFeatureLocalResolveProvider provider =
   *     new OpenFeatureLocalResolveProvider("your-client-secret");
   * OpenFeatureAPI.getInstance().setProviderAndWait(provider);
   * }</pre>
   *
   * @param clientSecret the client secret for your application, used for flag resolution
   *     authentication
   */
  public OpenFeatureLocalResolveProvider(String clientSecret) {
    this(new LocalProviderConfig(), clientSecret);
  }

  /**
   * Creates a new OpenFeature provider for local flag resolution with custom channel factory.
   *
   * <p>This constructor accepts a {@link LocalProviderConfig} which allows you to customize how
   * gRPC channels are created, particularly useful for testing with mock servers or advanced
   * production scenarios requiring custom connection logic.
   *
   * <p><strong>Example with custom channel factory for testing:</strong>
   *
   * <pre>{@code
   * ChannelFactory mockFactory = (target, interceptors) ->
   *     InProcessChannelBuilder.forName("test-server")
   *         .usePlaintext()
   *         .intercept(interceptors.toArray(new ClientInterceptor[0]))
   *         .build();
   *
   * LocalProviderConfig config = new LocalProviderConfig(mockFactory);
   * OpenFeatureLocalResolveProvider provider =
   *     new OpenFeatureLocalResolveProvider(config, "client-secret");
   * }</pre>
   *
   * @param config the provider configuration including optional channel factory
   * @param clientSecret the client secret for your application, used for flag resolution
   *     authentication
   */
  public OpenFeatureLocalResolveProvider(LocalProviderConfig config, String clientSecret) {
    this(config, clientSecret, new RemoteResolverFallback(config.getChannelFactory()));
  }

  /**
   * Creates a new OpenFeature provider for local flag resolution with a custom sticky resolve
   * strategy.
   *
   * <p>This constructor uses the default gRPC channel factory but allows you to provide a custom
   * {@link StickyResolveStrategy} such as a {@link MaterializationRepository} for local storage of
   * sticky assignments.
   *
   * <p><strong>Example with custom materialization repository:</strong>
   *
   * <pre>{@code
   * MaterializationRepository repository = new InMemoryMaterializationRepoExample();
   * OpenFeatureLocalResolveProvider provider =
   *     new OpenFeatureLocalResolveProvider("client-secret", repository);
   * }</pre>
   *
   * @param clientSecret the client secret for your application, used for flag resolution
   *     authentication
   * @param stickyResolveStrategy the strategy to use for handling sticky flag resolution
   */
  public OpenFeatureLocalResolveProvider(
      String clientSecret, StickyResolveStrategy stickyResolveStrategy) {
    this(new LocalProviderConfig(), clientSecret, stickyResolveStrategy);
  }

  /**
   * Creates a new OpenFeature provider for local flag resolution with custom channel factory and
   * sticky resolve strategy.
   *
   * @param config the provider configuration including optional channel factory
   * @param clientSecret the client secret for your application, used for flag resolution
   *     authentication
   * @param stickyResolveStrategy the strategy to use for handling sticky flag resolution
   */
  public OpenFeatureLocalResolveProvider(
      LocalProviderConfig config,
      String clientSecret,
      StickyResolveStrategy stickyResolveStrategy) {
    this.clientSecret = clientSecret;
    this.stickyResolveStrategy = stickyResolveStrategy;
    this.stateProvider = new FlagsAdminStateFetcher(clientSecret);
    final var wasmFlagLogger = new GrpcWasmFlagLogger(clientSecret, config.getChannelFactory());
    this.wasmResolveApi = new ThreadLocalSwapWasmResolverApi(wasmFlagLogger, stickyResolveStrategy);
  }

  @VisibleForTesting
  public OpenFeatureLocalResolveProvider(
      AccountStateProvider accountStateProvider,
      String clientSecret,
      StickyResolveStrategy stickyResolveStrategy) {
    this.stickyResolveStrategy = stickyResolveStrategy;
    this.clientSecret = clientSecret;
    this.stateProvider = accountStateProvider;
    this.wasmResolveApi =
        new ThreadLocalSwapWasmResolverApi(new NoOpWasmFlagLogger(), stickyResolveStrategy);
  }

  @Override
  public ProviderState getState() {
    return state.get();
  }

  @Override
  public void initialize(EvaluationContext evaluationContext) {
    stateProvider.reload();
    final byte[] state = stateProvider.provide();
    final String accountId = stateProvider.accountId();
    wasmResolveApi.init(state, accountId);
    final long pollIntervalSeconds = getPollIntervalSeconds();
    final AtomicReference<byte[]> resolverStateProtobuf = new AtomicReference<>(state);
    flagsFetcherExecutor.scheduleAtFixedRate(
        () -> {
          stateProvider.reload();
          resolverStateProtobuf.set(stateProvider.provide());
        },
        pollIntervalSeconds,
        pollIntervalSeconds,
        TimeUnit.SECONDS);
    logPollExecutor.scheduleAtFixedRate(
        () -> wasmResolveApi.updateStateAndFlushLogs(resolverStateProtobuf.get(), accountId),
        POLL_LOG_INTERVAL.getSeconds(),
        POLL_LOG_INTERVAL.getSeconds(),
        TimeUnit.SECONDS);
    this.state.set(ProviderState.READY);
  }

  @Override
  public Metadata getMetadata() {
    return () -> "confidence-sdk-java-local";
  }

  @Override
  public ProviderEvaluation<Boolean> getBooleanEvaluation(
      String key, Boolean defaultValue, EvaluationContext ctx) {
    return getCastedEvaluation(key, defaultValue, ctx, Value::asBoolean);
  }

  @Override
  public ProviderEvaluation<String> getStringEvaluation(
      String key, String defaultValue, EvaluationContext ctx) {
    return getCastedEvaluation(key, defaultValue, ctx, Value::asString);
  }

  @Override
  public ProviderEvaluation<Integer> getIntegerEvaluation(
      String key, Integer defaultValue, EvaluationContext ctx) {
    return getCastedEvaluation(key, defaultValue, ctx, Value::asInteger);
  }

  @Override
  public ProviderEvaluation<Double> getDoubleEvaluation(
      String key, Double defaultValue, EvaluationContext ctx) {
    return getCastedEvaluation(key, defaultValue, ctx, Value::asDouble);
  }

  private <T> ProviderEvaluation<T> getCastedEvaluation(
      String key, T defaultValue, EvaluationContext ctx, Function<Value, T> cast) {
    final Value wrappedDefaultValue;
    try {
      wrappedDefaultValue = new Value(defaultValue);
    } catch (InstantiationException e) {
      // this is not going to happen because we only call the constructor with supported types
      throw new RuntimeException(e);
    }

    final ProviderEvaluation<Value> objectEvaluation =
        getObjectEvaluation(key, wrappedDefaultValue, ctx);

    final T castedValue = cast.apply(objectEvaluation.getValue());
    if (castedValue == null) {
      log.warn("Cannot cast value '{}' to expected type", objectEvaluation.getValue().toString());
      throw new TypeMismatchError(
          String.format("Cannot cast value '%s' to expected type", objectEvaluation.getValue()));
    }

    return ProviderEvaluation.<T>builder()
        .value(castedValue)
        .variant(objectEvaluation.getVariant())
        .reason(objectEvaluation.getReason())
        .errorMessage(objectEvaluation.getErrorMessage())
        .errorCode(objectEvaluation.getErrorCode())
        .build();
  }

  @Override
  public void shutdown() {
    this.stickyResolveStrategy.close();
    this.wasmResolveApi.close();
    FeatureProvider.super.shutdown();
  }

  @Override
  public ProviderEvaluation<Value> getObjectEvaluation(
      String key, Value defaultValue, EvaluationContext ctx) {

    final FlagPath flagPath;
    try {
      flagPath = FlagPath.getPath(key);
    } catch (Exceptions.IllegalValuePath e) {
      log.warn(e.getMessage());
      throw new RuntimeException(e);
    }

    final Struct evaluationContext = OpenFeatureUtils.convertToProto(ctx);
    // resolve the flag by calling the resolver API
    final ResolveFlagsResponse resolveFlagResponse;
    try {
      final String requestFlagName = "flags/" + flagPath.getFlag();

      final var req =
          ResolveFlagsRequest.newBuilder()
              .addFlags(requestFlagName)
              .setApply(true)
              .setClientSecret(clientSecret)
              .setEvaluationContext(
                  Struct.newBuilder().putAllFields(evaluationContext.getFieldsMap()).build())
              .setSdk(
                  Sdk.newBuilder()
                      .setId(SdkId.SDK_ID_JAVA_LOCAL_PROVIDER)
                      .setVersion(Version.VERSION)
                      .build())
              .build();

      resolveFlagResponse =
          wasmResolveApi
              .resolveWithSticky(
                  ResolveWithStickyRequest.newBuilder()
                      .setResolveRequest(req)
                      .setFailFastOnSticky(getFailFast(stickyResolveStrategy))
                      .build())
              .get();

      if (resolveFlagResponse.getResolvedFlagsList().isEmpty()) {
        log.warn("No active flag '{}' was found", flagPath.getFlag());
        throw new FlagNotFoundError(
            String.format("No active flag '%s' was found", flagPath.getFlag()));
      }

      final String responseFlagName = resolveFlagResponse.getResolvedFlags(0).getFlag();
      if (!requestFlagName.equals(responseFlagName)) {
        log.warn("Unexpected flag '{}' from remote", responseFlagName.replaceFirst("^flags/", ""));
        throw new FlagNotFoundError(
            String.format(
                "Unexpected flag '%s' from remote", responseFlagName.replaceFirst("^flags/", "")));
      }

      final ResolvedFlag resolvedFlag = resolveFlagResponse.getResolvedFlags(0);

      if (resolvedFlag.getVariant().isEmpty()) {
        return ProviderEvaluation.<Value>builder()
            .value(defaultValue)
            .reason(
                "The server returned no assignment for the flag. Typically, this happens "
                    + "if no configured rules matches the given evaluation context.")
            .build();
      } else {
        final Value fullValue =
            OpenFeatureTypeMapper.from(resolvedFlag.getValue(), resolvedFlag.getFlagSchema());

        // if a path is given, extract expected portion from the structured value
        Value value = OpenFeatureUtils.getValueForPath(flagPath.getPath(), fullValue);

        if (value.isNull()) {
          value = defaultValue;
        }

        // regular resolve was successful
        return ProviderEvaluation.<Value>builder()
            .value(value)
            .reason(resolvedFlag.getReason().toString())
            .variant(resolvedFlag.getVariant())
            .build();
      }
    } catch (StatusRuntimeException e) {
      handleStatusRuntimeException(e);
      throw new GeneralError("Unknown error occurred when calling the provider backend");
    } catch (ExecutionException | InterruptedException e) {
      throw new RuntimeException(e);
    }
  }

  private static boolean getFailFast(StickyResolveStrategy stickyResolveStrategy) {
    return stickyResolveStrategy instanceof ResolverFallback;
  }

  private static void handleStatusRuntimeException(StatusRuntimeException e) {
    if (e.getStatus().getCode() == Status.Code.DEADLINE_EXCEEDED) {
      log.error("Deadline exceeded when calling provider backend", e);
      throw new GeneralError("Deadline exceeded when calling provider backend");
    } else if (e.getStatus().getCode() == Status.Code.UNAVAILABLE) {
      log.error("Provider backend is unavailable", e);
      throw new GeneralError("Provider backend is unavailable");
    } else if (e.getStatus().getCode() == Status.Code.UNAUTHENTICATED) {
      log.error("UNAUTHENTICATED", e);
      throw new GeneralError("UNAUTHENTICATED");
    } else {
      log.error(
          "Unknown error occurred when calling the provider backend. Grpc status code {}",
          e.getStatus().getCode(),
          e);
      throw new GeneralError(
          String.format(
              "Unknown error occurred when calling the provider backend. Exception: %s",
              e.getMessage()));
    }
  }
}
